# flask-jwt-oidc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pythonpackage.yml
examples/: config.py  flask_app.py
examples/flask_app/: .onv  app.py  config.py  pytest.ini
examples/flask_app/tests/: conftest.py  test_flask_app.py
flask_jwt_oidc/: __init__.py  exceptions.py  jwt_manager.py
requirements/: dev.txt  prod.nover.txt  prod.txt
src/flask_jwt_oidc/: jwt_manager.py
tests/: conftest.py  test_cookie_protected.py  test_protected.py  test_unit.py  test_unprotected.py
